--- a/tasks/table task/index.html
+++ b/tasks/table task/index.html
@@ -19,102 +19,22 @@
         
         </div>
         <div class="table-container">
-            <table class="demTable">
+            <table class="Table">
                 <tr>
                     <th>Id<i class="fa-solid fa-arrow-up"></i></th>
-                    <th>Customer <i class="fa-solid fa-circle-arrow-down"></i></th>
+                    <th id="customer">Customer <i class="fa-solid fa-circle-arrow-down"></i></th>
                     <th>Location <i class="fa-solid fa-arrow-down"></i></th>
                     <th>Order Date <i class="fa-solid fa-arrow-down"></i></th>
                     <th>Status <i class="fa-solid fa-arrow-down"></i></th>
                     <th>Amount <i class="fa-solid fa-arrow-down"></i></th>
                 </tr>
                 <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                </tr>
-                <tr>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
-                    <td>g,d,jssg</td>
+                    <td>9</td>
+                    <td><img src="./assets/images/user-1.jpg" alt="" class="profiles">Aayat ALi Khan</td>
+                    <td>London</td>
+                    <td>22 Dec, 2023</td>
+                    <td class="status">Pending</td>
+                    <td>$249.99</td>
                 </tr>
             </table>
         </div>
