Aro 2 section added

--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--<link rel="stylesheet" href="./normalize.css">-->
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/c4d75d0101.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -94,7 +95,6 @@
             </div>
         </div>
     </section>
-
     <section>
         <div class="container">
             <div class="aro">
@@ -166,6 +166,82 @@
                 <img src="./assets/icons/Forbes.png" alt="">
                 <img src="./assets/icons/screen sanity.png" alt="">
                 <img src="./assets/icons/knox news.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section>
+         <div class="aro-in-action">
+            <div class="container">
+                <div class="aro-in-action-text">
+                    <h4>See Aro in Action</h4>
+                    <p>Aro helps families put down their phones to connect, relax, and recharge.</p>
+                        <div class="watch-now">
+                            <button><i class="fa-solid fa-play"></i></button>
+                            <div class="watch-now-text"><h4><a href="#">Watch Now</a></h4>
+                            <h6>01:25</h6>
+                        </div>
+                        </div>
+                </div>
+            </div>
+         </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="aro-two">
+                <div class="aro-text">
+                    <h3>The Aro Experience</h3>
+                    <p>Aro is so much more than an app and box for you <br>
+                    phone. It’s about what happens once you put down your <br>
+                    phone. Aro lets parents and kids connect by creating an <br>
+                    environment where phones aren't a distraction.</p>
+                        <h5>See How it Works</h5>
+                        <rectangle></rectangle>
+                </div>
+                <div class="aro-img"><img src="./assets/images/me time.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="aro-two">
+                <div class="aro-img"><img src="./assets/images/Are app.png" alt=""></div>
+                <div class="aro-text">
+                    <h3>The Aro App</h3>
+                    <p>The Aro app gamifies the experience of being off your <br>
+                    phone. The app automatically connects to the Aro Home <br>
+                    device, measures the time you spend away from your <br>
+                    phone, reminds you to take breaks from your phone, <br>
+                    shows you data to improve your phone habits, and even <br>
+                    lets you connect and compete with others.</p>
+                    <h5>See How it Works</h5>
+                    <rectangle></rectangle>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="aro-two">
+                <div class="aro-text">
+                    <h3>The Aro Home Device</h3>
+                    <p>It’s beautiful, designed to be seen, and packed full of <br>
+                        technology. The Aro Home device automatically <br>
+                        connects to your phone when it’s placed inside and starts <br>
+                        measuring the time you spend away from your phone. Oh <br>
+                        yeah. It charges five phones at once too.</p>
+                        <h5>See How it Works</h5>
+                        <rectangle></rectangle>
+                </div>
+                <div class="aro-img"><img src="./assets/images/AroDevice.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="extra-link">
+                
             </div>
         </div>
     </section>
