feedback section added

--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -31,7 +31,6 @@
             </nav>
         </div>
     </header>
-
     <section class="intro">
         <div class="container">
             <div class="intro-content">
@@ -51,7 +50,6 @@
             </div>
         </div>
     </section>
-
     <section>
         <div class="container">
             <div class="introducing">
@@ -185,7 +183,6 @@
             </div>
          </div>
     </section>
-
     <section>
         <div class="container">
             <div class="aro-two">
@@ -241,9 +238,50 @@
     <section>
         <div class="container">
             <div class="extra-link">
-                
+                <div class="extra-link-text">
+                <rectangle>
+                    <p><a href="#">Get Started with Aro</a></p>
+                    <p><a href="#">Extra Link</a></p>
+                </rectangle>
+            </div>
             </div>
         </div>
+    </section>
+    <section>
+        <!-- <div class="container"> -->
+            <div class="feedback">
+            <div class="sm-feedback">
+                <p>“I don’t want my kids constantly seeing <br>
+                me with my head down to be normal. <br>
+                Aro gives us an invitation to put our <br>
+                phones away and allows us to be more <br>
+                present with each other.”</p>
+                <h5>Shelly McIntosh, Mom of 2</h5>
+
+            </div>
+            <div class="cm-feedback">
+                <p>“Aro holds us accountable for the <br>
+                time that we spend every day. Instead <br>
+                of looking down at our phones, we’re <br>
+                looking into our kids’ eyes, we’re <br>
+                playing with them, and we’re shaping <br>
+                our family in a more loving and <br>
+                powerful way.”</p>
+                <h5>Clay McInnis, Dad of 2</h5>
+
+            </div>
+            <div class="eb-feedback">
+                <p>“We’ve always had our kids keep their <br>
+                devices outside in the living room <br>
+                before they go to bed, but now our <br>
+                daughter loves putting her phone in <br>
+                Aro at night so she gets credit for her <br>
+                time away.”</p>
+                <h5>Erin Burkhalter, Mom of 2</h5>
+
+            </div>
+        </div>
+    </div>
     </section>
 </body>
 
