all content added

--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -283,6 +283,74 @@
         </div>
     </div>
     </section>
+    <section>
+        <div class="container">
+            <div class="why-aro">
+                <h1>Why Aro</h1>
+                <h5>A positive and practical approach to putting down our phones to be more present in the moments that matter</h5>
+            
+            <div class="why-aro-flexbox">
+                <div class="aro-flexbox"><img src="./assets/images/space.png" alt="">
+                <p>Creates space from<!--  <br> -->
+                     your phone</p>
+                <h5>Unlike other solutions designed to reduce screen time, the Aro platform combines an app and a physical device to create distance between you and your phone so you can have quality time without the distraction of your phone.</h5>
+                </div>
+                <div class="aro-flexbox"><img src="./assets/images/credit.png" alt="">
+                    <p>Gives you credit for intentional time</p>
+                    <h5>We live in a gamified world - badges, streaks, achievements, and filling in that daily ring. Aro gives you credit for the time you spend engaged in real life because the reward builds the habit of putting down your phone.</h5>
+                    </div>
+                    <div class="aro-flexbox"><img src="./assets/images/family.png" alt="">
+                <p>Designed with families in mind</p>
+                <h5>We’ve spent years researching, designing, and developing a solution to help both parents and kids. From a beautiful device Mom won’t hate on the kitchen counter to the celebratory GIFs in the app, Aro appeals to the whole family..</h5>
+                </div>
+                <div class="aro-flexbox"><img src="./assets/images/practical.png" alt="">
+                <p>Aspirational, yet practical</p>
+                <h5>No heavy handed approaches here. Getting rid of your phone or completely locking it away are not practical solutions. We need our phones...but maybe not at the dinner table or during a conversation. We designed Aro to fit in your everyday rhythms.</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="interactions">
+            <h2>89% of interactions <br>
+                with our <br>
+                smartphones are <br>
+                self-initiated.</h2>
+            <p>Source: Dr. Maxi Heitmayer</p>
+            <h2>0% of people can use their phone when it's not in their hand.</h2>
+        </div>
+    </section>
+    <section>
+    <div class="container">
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="./assets/images/lastpage1.png" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="./assets/images/lastpage2.png" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="./assets/images/Life.png" alt="">
+                <div class="grid-item-text">
+                    <h1>Life happens <br>
+                        off your phone</h1>
+                    <p>Make phone-free time a part of your daily routine.</p>
+                    <rectangle>
+                        <p><a href="#">Join Now</a></p>
+                        <p><a href="#">Extra Link</a></p>
+                    </div>rectangle>
+                </div>
+            </div>
+        </div>    
+    </div>
+</section>
+
+            </div>
+            </div>
+        </div>    
+    </div>
+    </section>
 </body>
 
 </html>
