Delete .vscode directory

--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--<link rel="stylesheet" href="./normalize.css">-->
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/c4d75d0101.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,11 +27,10 @@
                     Our story
                 </a>
 
-                <button class="button">Get Started</button>
+                <button class="button"><a href="#">Get Started</a></button>
             </nav>
         </div>
     </header>
-
     <section class="intro">
         <div class="container">
             <div class="intro-content">
@@ -50,7 +50,6 @@
             </div>
         </div>
     </section>
-
     <section>
         <div class="container">
             <div class="introducing">
@@ -63,7 +62,7 @@
                         be fully present</p>
                     <div class="link-introducing-Aro">
                         <button class="button btnlink">
-                            Join Now
+                            <h5>Join Now</h5>
                         </button>
                         <a id="How-it-works-button" href="#">How It Works</a>
                     </div>
@@ -94,7 +93,6 @@
             </div>
         </div>
     </section>
-
     <section>
         <div class="container">
             <div class="aro">
@@ -165,7 +163,249 @@
                 <img src="./assets/icons/WSJ.png" alt="">
                 <img src="./assets/icons/Forbes.png" alt="">
                 <img src="./assets/icons/screen sanity.png" alt="">
+            </div>
+            <div class="featured-in-icons row-2">
                 <img src="./assets/icons/knox news.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section>
+         <div class="aro-in-action">
+            <div class="container">
+                <div class="aro-in-action-text">
+                    <h4>See Aro in Action</h4>
+                    <p>Aro helps families put down their phones to connect, relax, and recharge.</p>
+                        <div class="watch-now">
+                            <button><i class="fa-solid fa-play"></i></button>
+                            <div class="watch-now-text"><h4><a href="#">Watch Now</a></h4>
+                            <h6>01:25</h6>
+                        </div>
+                        </div>
+                </div>
+            </div>
+         </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="aro-two">
+                <div class="aro-text">
+                    <h3>The Aro Experience</h3>
+                    <p>Aro is so much more than an app and box for you <br>
+                    phone. It’s about what happens once you put down your <br>
+                    phone. Aro lets parents and kids connect by creating an <br>
+                    environment where phones aren't a distraction.</p>
+                        <h5>See How it Works</h5>
+                        <rectangle></rectangle>
+                </div>
+                <div class="aro-img"><img src="./assets/images/me time.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="aro-two">
+                <div class="aro-img"><img src="./assets/images/Are app.png" alt=""></div>
+                <div class="aro-text">
+                    <h3>The Aro App</h3>
+                    <p>The Aro app gamifies the experience of being off your <br>
+                    phone. The app automatically connects to the Aro Home <br>
+                    device, measures the time you spend away from your <br>
+                    phone, reminds you to take breaks from your phone, <br>
+                    shows you data to improve your phone habits, and even <br>
+                    lets you connect and compete with others.</p>
+                    <h5>See How it Works</h5>
+                    <rectangle></rectangle>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="aro-two">
+                <div class="aro-text">
+                    <h3>The Aro Home Device</h3>
+                    <p>It’s beautiful, designed to be seen, and packed full of <br>
+                        technology. The Aro Home device automatically <br>
+                        connects to your phone when it’s placed inside and starts <br>
+                        measuring the time you spend away from your phone. Oh <br>
+                        yeah. It charges five phones at once too.</p>
+                        <h5>See How it Works</h5>
+                        <rectangle></rectangle>
+                </div>
+                <div class="aro-img"><img src="./assets/images/AroDevice.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="extra-link">
+                <div class="extra-link-text">
+                <rectangle>
+                    <p><a href="#">Get Started with Aro</a></p>
+                    <p><a href="#">Extra Link</a></p>
+                </rectangle>
+            </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="brown-bg">
+        <div class="container">
+            
+            <div class="feedback">   
+            <div class="sm-feedback">
+                <p>“I don’t want my kids constantly seeing 
+                me with my head down to be normal. 
+                Aro gives us an invitation to put our 
+                phones away and allows us to be more 
+                present with each other.”</p>
+                <h5>Shelly McIntosh, Mom of 2</h5>
+
+            </div>
+            <div class="cm-feedback">
+                <p>“Aro holds us accountable for the 
+                time that we spend every day. Instead
+                of looking down at our phones, we’re 
+                looking into our kids’ eyes, we’re 
+                playing with them, and we’re shaping 
+                our family in a more loving and 
+                powerful way.”</p>
+                <h5>Clay McInnis, Dad of 2</h5>
+
+            </div>
+            <div class="eb-feedback">
+                <p>“We’ve always had our kids keep their 
+                devices outside in the living room 
+                before they go to bed, but now our 
+                daughter loves putting her phone in 
+                Aro at night so she gets credit for her 
+                time away.”</p>
+                <h5>Erin Burkhalter, Mom of 2</h5>
+
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="why-aro">
+                <h1>Why Aro</h1>
+                <h5>A positive and practical approach to putting down our phones to be more present in the moments that matter</h5>
+            
+            <div class="why-aro-flexbox">
+                <div class="aro-flexbox"><img src="./assets/images/space.png" alt="">
+                <p>Creates space from<!--  <br> -->
+                     your phone</p>
+                <h5>Unlike other solutions designed to reduce screen time, the Aro platform combines an app and a physical device to create distance between you and your phone so you can have quality time without the distraction of your phone.</h5>
+                </div>
+                <div class="aro-flexbox"><img src="./assets/images/credit.png" alt="">
+                    <p>Gives you credit for intentional time</p>
+                    <h5>We live in a gamified world - badges, streaks, achievements, and filling in that daily ring. Aro gives you credit for the time you spend engaged in real life because the reward builds the habit of putting down your phone.</h5>
+                    </div>
+                    <div class="aro-flexbox"><img src="./assets/images/family.png" alt="">
+                <p>Designed with families in mind</p>
+                <h5>We’ve spent years researching, designing, and developing a solution to help both parents and kids. From a beautiful device Mom won’t hate on the kitchen counter to the celebratory GIFs in the app, Aro appeals to the whole family..</h5>
+                </div>
+                <div class="aro-flexbox"><img src="./assets/images/practical.png" alt="">
+                <p>Aspirational, yet practical</p>
+                <h5>No heavy handed approaches here. Getting rid of your phone or completely locking it away are not practical solutions. We need our phones...but maybe not at the dinner table or during a conversation. We designed Aro to fit in your everyday rhythms.</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="interactions">
+            <h2>89% of interactions <br>
+                with our <br>
+                smartphones are <br>
+                self-initiated.</h2>
+            <p>Source: Dr. Maxi Heitmayer</p>
+            <h2>0% of people can use their phone when it's not in their hand.</h2>
+        </div>
+    </section>
+    <section>
+    <div class="container">
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="./assets/images/lastpage1.png" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="./assets/images/lastpage2.png" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="./assets/images/Life.png" alt="">
+                <div class="grid-item-text">
+                    <h1>Life happens <br>
+                        off your phone</h1>
+                    <p>Make phone-free time a part of your daily routine.</p>
+                    <rectangle>
+                        <p><a href="#">Join Now</a></p>
+                        <p><a href="#">Extra Link</a></p>
+                    </div>rectangle>
+                </div>
+            </div>
+        </div>    
+    </div>
+    </section>
+    <section>
+    <div class="container">
+<div class="footer-intro">
+        <div class="footer-intro-text">
+            <div class="footer-intro-content-text">
+                <p>Order your Aro</p>
+                <h6>Join Aro now</h6>
+                <h6>FAQs</h6>
+            </div>
+            <div class="footer-intro-content-text">
+                <p>About</p>
+                <h6>Our story</h6>
+                <h6>Blog</h6>
+            </div>
+            <div class="footer-intro-content-text">
+                <p>Contact</p>
+                <h6>Contact us</h6>
+                <h6>Support</h6>
+            </div>
+            <div class="footer-intro-content-text">
+                <p>Subscribe</p>
+                <rectangle>
+                </rectangle>
+            </div>
+        </div>
+            <div class="footer-intro-content-img">
+                <img src="./assets/icons/aro.png" alt="Aro Logo">
+            </div>
+        </div>
+    </div>
+    </section> 
+
+    <section>
+        <div class="container">
+            <div class="footer">
+                <div class="bluetooth">
+                    <p>The Bluetooth® word mark and logos are registered trademarks owned by 
+                        Bluetooth SIG,Inc. and any use of such marks by Aro is under license. Other 
+                        trademarks and trade names are those of their respective owners.</p>
+                    <h6>
+                        © 2022 Aro. All rights reserved.
+                    </h6>
+                </div>
+                <div class="socials">
+                    <img src="./assets/icons/twitter.png" alt="">
+                    <img src="./assets/icons/instagram.png" alt="">
+                    <img src="./assets/icons/facebook.png" alt="">
+                    <img src="./assets/icons/youtube.png" alt="">
+                    <img src="./assets/icons/linkedin.png" alt="">
+                </div>
+                <div class="policy">
+                    <h6>Privacy Policy</h6>
+                    <h6>Terms of Service</h6>
+                    <h6>Terms of Sale</h6>
+                </div>
             </div>
         </div>
     </section>
