--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./normalize.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/c4d75d0101.js" crossorigin="anonymous"></script>
 </head>
 
