--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/c4d75d0101.js" crossorigin="anonymous"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 </head>
 
 <body>
@@ -310,14 +311,14 @@
                 <h5>We’ve spent years researching, designing, and developing a solution to help both parents and kids. From a beautiful device Mom won’t hate on the kitchen counter to the celebratory GIFs in the app, Aro appeals to the whole family..</h5>
                 </div>
                 <div class="aro-flexbox"><img src="./assets/images/practical.png" alt="">
-                <p>Aspirational, yet practical</p>
-                <h5>No heavy handed approaches here. Getting rid of your phone or completely locking it away are not practical solutions. We need our phones...but maybe not at the dinner table or during a conversation. We designed Aro to fit in your everyday rhythms.</h5>
-                </div>
+                    <p>Aspirational, yet practical</p>
+                    <h5>No heavy handed approaches here. Getting rid of your phone or completely locking it away are not practical solutions. We need our phones...but maybe not at the dinner table or during a conversation. We designed Aro to fit in your everyday rhythms.</h5>
                 </div>
             </div>
         </div>
     </section>
     <section>
+        <div class="container">
         <div class="interactions">
             <h2>89% of interactions <br>
                 with our <br>
@@ -326,6 +327,7 @@
             <p>Source: Dr. Maxi Heitmayer</p>
             <h2>0% of people can use their phone when it's not in their hand.</h2>
         </div>
+    </div>
     </section>
     <section>
     <div class="container">
@@ -409,6 +411,7 @@
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
