figma-finished-amin

--- a/tasks/figma task/index.html
+++ b/tasks/figma task/index.html
@@ -84,7 +84,7 @@
                         their phones when it’s family time so you don’t look <br>
                         back wishing you spent more time with your family and <br>
                         less time on your phone.</p>
-                    <rectangle></rectangle>
+                   <!--  <rectangle></rectangle> -->
                     <h4>75%</h4>
                     <h5>of the time we spend with our kids in our lifetime will be <br>
                         spent by age 12.</h5>
@@ -105,7 +105,7 @@
                         phones, allows you to model good habits, and gives you <br>
                         peace of mind knowing they have the tools to be safe <br>
                         and successful.</p>
-                    <rectangle></rectangle>
+                    <!-- <rectangle></rectangle> -->
                     <h4>83%</h4>
                     <h5>of parents believe it's important to have time as a <br>
                         family without screens present.</h5>
@@ -125,7 +125,7 @@
                         couch and pick up our phones rather than connect with <br>
                         the person right next to us. Putting your phone in Aro <br>
                         shows your partner you are truly present with them.​</p>
-                    <rectangle></rectangle>
+                    <rectangle-2></rectangle-2>
                     <h4>79%</h4>
                     <h5>of married couples admit technology distracts them <br>
                         from connecting with each other.</h5>
@@ -145,7 +145,7 @@
                         Aro is your reminder that it’s OK to take some time for <br>
                         yourself. That could be reading a book, reflecting on the <br>
                         day, or even just getting a good night's sleep. You deserve it.</p>
-                    <rectangle></rectangle>
+                 <!--    <rectangle></rectangle> -->
                     <h4>91%</h4>
                     <h5>of adults keep their phones within an arm’s reach <br>
                         all day.</h5>
@@ -196,7 +196,7 @@
                     phone. Aro lets parents and kids connect by creating an <br>
                     environment where phones aren't a distraction.</p>
                         <h5>See How it Works</h5>
-                        <rectangle></rectangle>
+                        <rectangle-2></rectangle-2>
                 </div>
                 <div class="aro-img"><img src="./assets/images/me time.png" alt=""></div>
             </div>
@@ -215,7 +215,7 @@
                     shows you data to improve your phone habits, and even <br>
                     lets you connect and compete with others.</p>
                     <h5>See How it Works</h5>
-                    <rectangle></rectangle>
+                    <rectangle-2></rectangle-2>
                 </div>
 
             </div>
@@ -232,7 +232,7 @@
                         measuring the time you spend away from your phone. Oh <br>
                         yeah. It charges five phones at once too.</p>
                         <h5>See How it Works</h5>
-                        <rectangle></rectangle>
+                        <rectangle-2></rectangle-2>
                 </div>
                 <div class="aro-img"><img src="./assets/images/AroDevice.png" alt=""></div>
             </div>
@@ -333,9 +333,9 @@
     <div class="container">
         <div class="grid-container">
             <div class="grid-item">
-                <img src="./assets/images/lastpage1.png" alt="">
+                <img class="display-none display-none" src="./assets/images/lastpage1.png" alt="">
             </div>
-            <div class="grid-item">
+            <div class="grid-item display-none">
                 <img src="./assets/images/lastpage2.png" alt="">
             </div>
             <div class="grid-item">
