dice-game updates

--- a/tasks/games/dice-game/index.html
+++ b/tasks/games/dice-game/index.html
@@ -9,9 +9,15 @@
   <body>
     <div class="dice-game">
       <h1>Let's Play</h1>
+      
       <div id="dices-main">
+        <div id="players">
+          <h2 id="player1">Player 1</h2>
+          <h2 id="player2">Player 2</h2>
+        </div>
+        <div class="dices">
         <div class="dice"></div>
-        <div class="dice2"></div>
+        <div class="dice2"></div></div>
         <!-- <div class="dice one">
           <span class="dot"> </span>
         </div>
@@ -57,6 +63,10 @@
             <span class="dot"> </span>
           </div>
         </div> -->
+      </div>
+      <div id="buttons">
+        <button id="play">Roll The Dices</button>
+        <button id="change-name">Change Names</button>
       </div>
     </div>
     <script src="./app.js"></script>
