dice-game ready

--- a/tasks/games/dice-game/index.html
+++ b/tasks/games/dice-game/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <div class="dice-game">
+  <!-- <body><div id="header"> -->
       <h1>Let's Play</h1>
+    <!-- </div> -->
+    <div class="dice-game">
       
       <div id="dices-main">
         <div id="players">
@@ -16,8 +17,9 @@
           <h2 id="player2">Player 2</h2>
         </div>
         <div class="dices">
-        <div class="dice"></div>
-        <div class="dice2"></div></div>
+          <div class="dice"></div>
+          <div class="dice2"></div>
+        </div>
         <!-- <div class="dice one">
           <span class="dot"> </span>
         </div>
@@ -67,6 +69,7 @@
       <div id="buttons">
         <button id="play">Roll The Dices</button>
         <button id="change-name">Change Names</button>
+        <!-- <button id="pick-rounds">Choose Rounds</button> -->
       </div>
     </div>
     <script src="./app.js"></script>
